# device-manager-plugin-anchor5

./: CMakeLists.txt  project.config
hw/: udev.c
hw/battery/: CMakeLists.txt  battery.c
hw/board/: CMakeLists.txt  board.c
hw/display/: CMakeLists.txt  display.c  display.c.bak
hw/external_connection/: CMakeLists.txt  external_connection.c
hw/led/: CMakeLists.txt  led.c
hw/thermal/: CMakeLists.txt  thermal.c
hw/touchscreen/: CMakeLists.txt  touchscreen.c
hw/usb_cfs_client/: CMakeLists.txt  usb_cfs_client.c
hw/usb_client/: CMakeLists.txt  usb_client.c  usb_client_configfs.c
hw/usb_gadget/: CMakeLists.txt  usb_gadget.c
packaging/: device-manager-plugin-artik.spec
