CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(device-manager-artik C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS} -Wall -Werror")

ADD_SUBDIRECTORY(hw/board)
ADD_SUBDIRECTORY(hw/display)
ADD_SUBDIRECTORY(hw/led)
ADD_SUBDIRECTORY(hw/touchscreen)
ADD_SUBDIRECTORY(hw/usb_gadget)
ADD_SUBDIRECTORY(hw/usb_client)
ADD_SUBDIRECTORY(hw/usb_cfs_client)
ADD_SUBDIRECTORY(hw/thermal)
